# cutFEM-twophase

./: README.md
sandbox/: bc_convergence.py
sandbox/cpp/: BelgianSolver.h  CMakeLists.txt  Error.ufl  ErrorDomain0.ufl  ErrorDomain0_cut.ufl  ErrorDomain1.ufl  ErrorDomain1_cut.ufl  Normal.ufl  PoissonDomain0.ufl  PoissonDomain1.ufl  PoissonInterface.ufl  PoissonP1.ufl  PoissonP2.ufl  PoissonP3.ufl  PoissonSolver.h  StrongSolver.h  WeakSkewSolver.h  WeakSymSolver.h  main.cpp
sandbox/python/: bc_convergence.py  mesh.geo  nitsche_order.py
